add flag to safely export data without any credentials
