# api/api/openapi.yaml
@@ -259,8 +259,13 @@ paths:
       tags:
       - roles/backup
   /api/v1/cluster/export:
-    get:
+    post:
       operationId: api.export
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ApiAPIExportInput'
       responses:
         "200":
           content:
@@ -1522,6 +1527,13 @@ paths:
       - roles/api
 components:
   schemas:
+    ApiAPIExportInput:
+      example:
+        safe: true
+      properties:
+        safe:
+          type: boolean
+      type: object
     ApiAPIExportOutput:
       example:
         entries:
